Fix navbar spacing issue

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -70,6 +70,10 @@
     padding-left: 10px;
 }
 
+.question-button {
+    background-color: white;
+}
+
 .question-list-item p, .question-list-item h3 {
     max-width: 100vh;
     overflow-y: hidden;
